--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,10 +21,10 @@ jobs:
     vmImage: $(image)
   strategy:
     matrix:
-      #'Ubuntu 22.04 LTS':
-      #  image: ubuntu-22.04
-      #'macOS 10.15':
-      #  image: macOS-11
+      # 'Ubuntu_20.04_LTS':
+      #   image: ubuntu-20.04
+      # 'macOS_11':
+      #   image: macOS-11
       'Windows_Server_2019_64_bit':
         image: windows-2019
   steps:
