--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ jobs:
       # 'Ubuntu_20.04_LTS':
       #   image: ubuntu-20.04
       # 'macOS_11':
-      #   image: macOS-11
+      #   image: macOS-11 #
       'Windows_Server_2019_64_bit':
         image: windows-2019
   steps:
