--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,8 +25,8 @@ jobs:
         image: ubuntu-20.04
       'macOS_13_x64':
         image: macOS-13
-      'Windows_Server_2019_x64':
-        image: windows-2019
+      #'Windows_Server_2019_x64':
+      #  image: windows-2019
   steps:
     - task: UsePythonVersion@0
       displayName: Fetch Python
@@ -100,3 +100,24 @@ jobs:
       inputs:
         targetPath: dist/cyclonedds-insight-0.0.0-win-x64.exe
         artifactName: cyclonedds-insight-0.0.0-win-x64
+
+    # Ubuntu 20 Installer
+    - task: PublishPipelineArtifact@1
+      condition: eq(variables['Agent.OS'], 'Linux')
+      inputs:
+        targetPath: dist/
+        artifactName: cyclonedds-insight-0.0.0-ubuntu20-x64
+    
+    # Bundle MacOS App dmg
+    - bash: |
+        set -e -x
+        ls -al
+        sh ./setup_dmg.sh 0.0.0
+      name: cyclonedds_insight_build_dmg
+      displayName: Build CycloneDDS-Insight-Dmg
+      condition: eq(variables['Agent.OS'], 'Darwin')
+    - task: PublishPipelineArtifact@1
+      condition: eq(variables['Agent.OS'], 'Darwin')
+      inputs:
+        targetPath: dist/cyclonedds-insight-0.0.0-darwin-x64.dmg
+        artifactName: cyclonedds-insight-0.0.0-mac-x64
