--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
   PY_VERSION: "3.9"
 
 jobs:
-- job: BuildCyclone
+- job: BuildCycloneDDSInsight
   pool:
     vmImage: $(image)
   strategy:
@@ -60,7 +60,6 @@ jobs:
       displayName: Clone the CycloneDDS-Python repository
     - bash: |
         set -e -x
-        ls -al
         export CYCLONEDDS_HOME=$PWD/deps/cyclonedds/build/install
         cd deps
         cd cyclonedds-python
@@ -71,7 +70,6 @@ jobs:
     # Build CycloneDDS-Insight
     - bash: |
         set -e -x
-        ls -al
         export CYCLONEDDS_HOME=$PWD/deps/cyclonedds/build/install
         export CYCLONEDDS_PYTHON_HOME=$PWD/deps/cyclonedds-python
         export PATH=$PATH:$CYCLONEDDS_HOME/bin
@@ -106,7 +104,6 @@ jobs:
     # Ubuntu 20 Bundle
     - bash: |
         set -e -x
-        ls -al
         cd dist
         tar -czf cyclonedds-insight-0.0.0-linux-x64.tar.gz "CycloneDDS Insight"
       name: cyclonedds_insight_build_lnx_tgz
@@ -121,7 +118,6 @@ jobs:
     # MacOS Bundle
     - bash: |
         set -e -x
-        ls -al
         brew install create-dmg
         sh ./setup_dmg.sh 0.0.0 x64
       name: cyclonedds_insight_build_dmg
