--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
   PY_VERSION: "3.9"
 
 jobs:
-- job: BuildCycloneDDSInsight
+- job: BuildInsight
   pool:
     vmImage: $(image)
   strategy:
