--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -126,7 +126,7 @@ jobs:
         mkdir -p dist/app
         cd dist
         cp -r "CycloneDDS Insight.app" app
-        tar -czf cyclonedds-insight-0.0.0-darwin-x64.tar.gz dist/app/*
+        tar -czf cyclonedds-insight-0.0.0-darwin-x64.tar.gz app/*
       name: cyclonedds_insight_build_dmg
       displayName: Build CycloneDDS-Insight-Dmg
       condition: eq(variables['Agent.OS'], 'Darwin')
