--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,11 +30,11 @@ jobs:
   steps:
 
     # Setup Python
-    - task: UsePythonVersion@0
-      displayName: Fetch Python
-      inputs:
-        versionSpec: $(PY_VERSION)
-        architecture: 'x64'
+    # - task: UsePythonVersion@0
+    #   displayName: Fetch Python
+    #   inputs:
+    #     versionSpec: $(PY_VERSION)
+    #     architecture: 'x64'
     - script: python -m pip install --upgrade pip
       displayName: 'Update pip'
 
