--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -124,8 +124,7 @@ jobs:
         mkdir -p dist/app
         cd dist
         cp -r "CycloneDDS Insight.app" app && \
-        cd app && \
-        tar -czf cyclonedds-insight-0.0.0-darwin-x64.tar.gz "CycloneDDS Insight.app"
+        tar -czf cyclonedds-insight-0.0.0-darwin-x64.tar.gz app/CycloneDDS\ Insight.app
       name: cyclonedds_insight_build_dmg
       displayName: Bundle MacOs App
       condition: eq(variables['Agent.OS'], 'Darwin')
