add nightly release

--- a/.azure/nightly-release.yml
+++ b/.azure/nightly-release.yml
@@ -10,8 +10,15 @@
 # SPDX-License-Identifier: EPL-2.0 OR BSD-3-Clause
 
 
-trigger: [ '*' ]
-pr: [ '*' ]
+trigger: none
+pr: none
+schedules:
+- cron: "0 0 * * *"
+  displayName: Nightly release
+  branches:
+    include:
+    - master
+  always: false
 
 
 jobs:
