fix ubuntu package

--- a/.azure/templates/build-insight.yml
+++ b/.azure/templates/build-insight.yml
@@ -64,7 +64,7 @@ steps:
       python -m pip install -r ./requirements.txt && \
       pyside6-rcc ./resources.qrc -o ./src/qrc_file.py && \
       DYLD_LIBRARY_PATH="$CYCLONEDDS_HOME/lib" \
-      LD_LIBRARY_PATH="$CYCLONEDDS_HOME/lib" \
+      LD_LIBRARY_PATH="$CYCLONEDDS_HOME/lib:$LD_LIBRARY_PATH" \
       pyinstaller main.spec --noconfirm --clean
     name: cyclonedds_insight_build
     displayName: Build CycloneDDS-Insight
