--- a/.azure/templates/build-insight.yml
+++ b/.azure/templates/build-insight.yml
@@ -21,6 +21,22 @@ steps:
   - script: python -m pip install --upgrade pip
     displayName: 'Update pip'
 
+# Generate build_info.py
+- bash: |
+    GIT_HASH_SHORT=$(git rev-parse --short HEAD)
+    GIT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+
+    echo "CYCLONEDDS_INSIGHT_GIT_HASH_SHORT = \"$GIT_HASH_SHORT\"" > src/build_info.py
+    echo "CYCLONEDDS_INSIGHT_GIT_BRANCH = \"$GIT_BRANCH\"" >> src/build_info.py
+  displayName: Generate build_info.py
+
+  # Get Version
+- bash: |
+    version=$(python src/version.py)
+    echo "##vso[task.setvariable variable=version;isOutput=true]$version"
+  displayName: Capture Version
+  name: versionStep
+
   # Build CycloneDDS
   - bash: |
       mkdir -p deps
@@ -79,29 +95,29 @@ steps:
   - task: PowerShell@2
     inputs:
       targetType: 'inline'
-      script: 'iscc.exe setup.iss /DTheAppVersion=0.0.0'
+      script: 'iscc.exe setup.iss /DTheAppVersion=$(version)'
     condition: eq(variables['Agent.OS'], 'Windows_NT')
     name: cyclonedds_insight_build_win_setup
     displayName: Build CycloneDDS-Insight
   - task: PublishPipelineArtifact@1
     condition: eq(variables['Agent.OS'], 'Windows_NT')
     inputs:
-      targetPath: dist/cyclonedds-insight-0.0.0-windows-x64.exe
-      artifactName: cyclonedds-insight-0.0.0-windows-x64
+      targetPath: dist/cyclonedds-insight-$(version)-windows-x64.exe
+      artifactName: cyclonedds-insight-$(version)-windows-x64
 
   # Linux Bundle
   - bash: |
       set -e -x
       cd dist
-      tar -czf cyclonedds-insight-0.0.0-linux-x64.tar.gz "CycloneDDS Insight"
+      tar -czf cyclonedds-insight-$(version)-linux-x64.tar.gz "CycloneDDS Insight"
     name: cyclonedds_insight_build_lnx_tgz
     displayName: Build CycloneDDS-Insight-Tgz
     condition: eq(variables['Agent.OS'], 'Linux')
   - task: PublishPipelineArtifact@1
     condition: eq(variables['Agent.OS'], 'Linux')
     inputs:
-      targetPath: dist/cyclonedds-insight-0.0.0-linux-x64.tar.gz
-      artifactName: cyclonedds-insight-0.0.0-linux-x64
+      targetPath: dist/cyclonedds-insight-$(version)-linux-x64.tar.gz
+      artifactName: cyclonedds-insight-$(version)-linux-x64
 
   # MacOS Bundle
   - bash: |
@@ -110,12 +126,12 @@ steps:
       cd dist
       cp -r "CycloneDDS Insight.app" bundle && \
       cd bundle
-      tar -czf cyclonedds-insight-0.0.0-macos-x64.tar.gz CycloneDDS\ Insight.app
+      tar -czf cyclonedds-insight-$(version)-macos-x64.tar.gz CycloneDDS\ Insight.app
     name: cyclonedds_insight_build_bundle
     displayName: Bundle MacOs App
     condition: eq(variables['Agent.OS'], 'Darwin')
   - task: PublishPipelineArtifact@1
     condition: eq(variables['Agent.OS'], 'Darwin')
     inputs:
-      targetPath: "dist/bundle/cyclonedds-insight-0.0.0-macos-x64.tar.gz"
-      artifactName: cyclonedds-insight-0.0.0-macos-x64
+      targetPath: "dist/bundle/cyclonedds-insight-$(version)-macos-x64.tar.gz"
+      artifactName: cyclonedds-insight-$(version)-macos-x64
