fix build pipeline

--- a/.azure/templates/build-insight.yml
+++ b/.azure/templates/build-insight.yml
@@ -95,7 +95,7 @@ steps:
   - task: PowerShell@2
     inputs:
       targetType: 'inline'
-      script: 'iscc.exe setup.iss /DTheAppVersion=$(version)'
+      script: 'iscc.exe setup.iss /DTheAppVersion=%version%'
     condition: eq(variables['Agent.OS'], 'Windows_NT')
     name: cyclonedds_insight_build_win_setup
     displayName: Build CycloneDDS-Insight
@@ -108,8 +108,9 @@ steps:
   # Linux Bundle
   - bash: |
       set -e -x
+      version=$(python src/version.py)
       cd dist
-      tar -czf cyclonedds-insight-$(version)-linux-x64.tar.gz "CycloneDDS Insight"
+      tar -czf cyclonedds-insight-$version-linux-x64.tar.gz "CycloneDDS Insight"
     name: cyclonedds_insight_build_lnx_tgz
     displayName: Build CycloneDDS-Insight-Tgz
     condition: eq(variables['Agent.OS'], 'Linux')
@@ -122,11 +123,12 @@ steps:
   # MacOS Bundle
   - bash: |
       set -e -x
+      version=$(python src/version.py)
       mkdir -p dist/bundle
       cd dist
       cp -r "CycloneDDS Insight.app" bundle && \
       cd bundle
-      tar -czf cyclonedds-insight-$(version)-macos-x64.tar.gz CycloneDDS\ Insight.app
+      tar -czf cyclonedds-insight-$version-macos-x64.tar.gz CycloneDDS\ Insight.app
     name: cyclonedds_insight_build_bundle
     displayName: Bundle MacOs App
     condition: eq(variables['Agent.OS'], 'Darwin')
