fix build pipeline

--- a/.azure/templates/build-insight.yml
+++ b/.azure/templates/build-insight.yml
@@ -33,7 +33,7 @@ steps:
     # Get Version
   - bash: |
       version=$(python src/version.py)
-      echo "##vso[task.setvariable variable=version;isOutput=true]$version"
+      echo "###vso[task.setvariable variable=version;]$version"
     displayName: Capture Version
     name: versionStep
 
@@ -108,9 +108,8 @@ steps:
   # Linux Bundle
   - bash: |
       set -e -x
-      version=$(python src/version.py)
       cd dist
-      tar -czf cyclonedds-insight-$version-linux-x64.tar.gz "CycloneDDS Insight"
+      tar -czf cyclonedds-insight-${VERSION}-linux-x64.tar.gz "CycloneDDS Insight"
     name: cyclonedds_insight_build_lnx_tgz
     displayName: Build CycloneDDS-Insight-Tgz
     condition: eq(variables['Agent.OS'], 'Linux')
@@ -123,17 +122,16 @@ steps:
   # MacOS Bundle
   - bash: |
       set -e -x
-      version=$(python src/version.py)
       mkdir -p dist/bundle
       cd dist
       cp -r "CycloneDDS Insight.app" bundle && \
       cd bundle
-      tar -czf cyclonedds-insight-$version-macos-x64.tar.gz CycloneDDS\ Insight.app
+      tar -czf cyclonedds-insight-${VERSION}-macos-x64.tar.gz CycloneDDS\ Insight.app
     name: cyclonedds_insight_build_bundle
     displayName: Bundle MacOs App
     condition: eq(variables['Agent.OS'], 'Darwin')
   - task: PublishPipelineArtifact@1
     condition: eq(variables['Agent.OS'], 'Darwin')
     inputs:
-      targetPath: "dist/bundle/cyclonedds-insight-$(version)-macos-x64.tar.gz"
+      targetPath: dist/bundle/cyclonedds-insight-$(version)-macos-x64.tar.gz
       artifactName: cyclonedds-insight-$(version)-macos-x64
