fix windows build pipeline

--- a/.azure/templates/build-insight.yml
+++ b/.azure/templates/build-insight.yml
@@ -95,7 +95,7 @@ steps:
   - task: PowerShell@2
     inputs:
       targetType: 'inline'
-      script: 'iscc.exe setup.iss /DTheAppVersion=%version%'
+      script: 'iscc.exe setup.iss /DTheAppVersion=${VERSION}'
     condition: eq(variables['Agent.OS'], 'Windows_NT')
     name: cyclonedds_insight_build_win_setup
     displayName: Build CycloneDDS-Insight
