fix branch name

--- a/.azure/templates/build-insight.yml
+++ b/.azure/templates/build-insight.yml
@@ -9,6 +9,11 @@
 #
 # SPDX-License-Identifier: EPL-2.0 OR BSD-3-Clause
 
+variables:
+  ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/') }}:
+    GIT_BRANCH: $[ replace(variables['Build.SourceBranch'], 'refs/heads/', '') ]
+  ${{ if startsWith(variables['Build.SourceBranch'], 'refs/pull/') }}:
+    GIT_BRANCH: $[ replace(variables['System.PullRequest.TargetBranch'], 'refs/heads/', '') ]
 
 steps:
 
@@ -24,10 +29,9 @@ steps:
   # Generate build_info.py
   - bash: |
       GIT_HASH_SHORT=$(git rev-parse --short HEAD)
-      GIT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
 
       echo "CYCLONEDDS_INSIGHT_GIT_HASH_SHORT = \"$GIT_HASH_SHORT\"" > src/build_info.py
-      echo "CYCLONEDDS_INSIGHT_GIT_BRANCH = \"$GIT_BRANCH\"" >> src/build_info.py
+      echo "CYCLONEDDS_INSIGHT_GIT_BRANCH = \"${GIT_BRANCH}\"" >> src/build_info.py
     displayName: Generate build_info.py
 
     # Get Version
@@ -55,7 +59,7 @@ steps:
       cmake --build . --config Release --target install --parallel
     name: cyclonedds_build
     displayName: Build CycloneDDS
-  
+
   # Build CycloneDDS-Python
   - bash: |
       cd deps
@@ -95,7 +99,7 @@ steps:
   - task: PowerShell@2
     inputs:
       targetType: 'inline'
-      script: 'iscc.exe setup.iss /DTheAppVersion=${VERSION}'
+      script: 'iscc.exe setup.iss /DTheAppVersion=$(VERSION)'
     condition: eq(variables['Agent.OS'], 'Windows_NT')
     name: cyclonedds_insight_build_win_setup
     displayName: Build CycloneDDS-Insight
