implement check for updates

--- a/.azure/templates/build-insight.yml
+++ b/.azure/templates/build-insight.yml
@@ -24,9 +24,13 @@ steps:
   # Generate build_info.py
   - bash: |
       GIT_HASH_SHORT=$(git rev-parse --short HEAD)
+      GIT_HASH=$(git rev-parse HEAD)
 
       echo "CYCLONEDDS_INSIGHT_GIT_HASH_SHORT = \"$GIT_HASH_SHORT\"" > src/build_info.py
+      echo "CYCLONEDDS_INSIGHT_GIT_HASH = \"$GIT_HASH\"" >> src/build_info.py
       echo "CYCLONEDDS_INSIGHT_GIT_BRANCH = \"${GIT_BRANCH}\"" >> src/build_info.py
+      echo "CYCLONEDDS_INSIGHT_BUILD_ID = \"${BUILD_ID}\"" >> src/build_info.py
+      echo "CYCLONEDDS_INSIGHT_BUILD_PIPELINE_ID = \"${BUILD_PIPELINE_ID}\"" >> src/build_info.py
     displayName: Generate build_info.py
 
     # Get Version
