--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,10 +9,16 @@
 #
 # SPDX-License-Identifier: EPL-2.0 OR BSD-3-Clause
 
-
 trigger: [ '*' ]
 pr: [ '*' ]
 
+variables:
+  BUILD_PIPELINE_ID: "$(System.DefinitionId)"
+  BUILD_ID: "$(Build.BuildId)"
+  ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/') }}:
+    GIT_BRANCH: "$(Build.SourceBranch)"
+  ${{ if startsWith(variables['Build.SourceBranch'], 'refs/pull/') }}:
+    GIT_BRANCH: "$(System.PullRequest.SourceBranch)"
 
 jobs:
 - job: BuildInsight
@@ -22,8 +28,8 @@ jobs:
     matrix:
       'Ubuntu_20.04_LTS_x64':
         image: ubuntu-20.04
-      'macOS_12_x64':
-        image: macOS-12
+      'macOS_13_x64':
+        image: macOS-13
       'Windows_Server_2019_x64':
         image: windows-2019
   steps:
