--- a/.azure/templates/build-insight.yml
+++ b/.azure/templates/build-insight.yml
@@ -21,25 +21,6 @@ steps:
   - script: python -m pip install --upgrade pip
     displayName: 'Update pip'
 
-  # Generate build_info.py
-  - bash: |
-      GIT_HASH_SHORT=$(git rev-parse --short HEAD)
-      GIT_HASH=$(git rev-parse HEAD)
-
-      echo "CYCLONEDDS_INSIGHT_GIT_HASH_SHORT = \"$GIT_HASH_SHORT\"" > src/build_info.py
-      echo "CYCLONEDDS_INSIGHT_GIT_HASH = \"$GIT_HASH\"" >> src/build_info.py
-      echo "CYCLONEDDS_INSIGHT_GIT_BRANCH = \"${GIT_BRANCH}\"" >> src/build_info.py
-      echo "CYCLONEDDS_INSIGHT_BUILD_ID = \"${BUILD_ID}\"" >> src/build_info.py
-      echo "CYCLONEDDS_INSIGHT_BUILD_PIPELINE_ID = \"${BUILD_PIPELINE_ID}\"" >> src/build_info.py
-    displayName: Generate build_info.py
-
-    # Get Version
-  - bash: |
-      version=$(python src/version.py)
-      echo "###vso[task.setvariable variable=version;]$version"
-    displayName: Capture Version
-    name: versionStep
-
   # Build CycloneDDS
   - bash: |
       mkdir -p deps
@@ -68,12 +49,41 @@ steps:
   - bash: |
       set -e -x
       export CYCLONEDDS_HOME=$PWD/deps/cyclonedds/build/install
-      cd deps
-      cd cyclonedds-python
+      cd deps/cyclonedds-python
       python -m pip install -e .
     name: cyclonedds_python_build
     displayName: Build CycloneDDS-Python
-  
+
+  # Generate build_info.py
+  - bash: |
+      GIT_HASH_SHORT=$(git rev-parse --short HEAD)
+      GIT_HASH=$(git rev-parse HEAD)
+      cd deps/cyclonedds
+      CYCLONEDDS_GIT_HASH_SHORT=$(git rev-parse --short HEAD)
+      CYCLONEDDS_GIT_HASH=$(git rev-parse HEAD)
+      cd ../cyclonedds-python
+      CYCLONEDDS_PYTHON_GIT_HASH_SHORT=$(git rev-parse --short HEAD)
+      CYCLONEDDS_PYTHON_GIT_HASH=$(git rev-parse HEAD)
+      cd ../..
+
+      echo "CYCLONEDDS_INSIGHT_GIT_HASH_SHORT = \"$GIT_HASH_SHORT\"" > src/build_info.py
+      echo "CYCLONEDDS_INSIGHT_GIT_HASH = \"$GIT_HASH\"" >> src/build_info.py
+      echo "CYCLONEDDS_INSIGHT_GIT_BRANCH = \"${GIT_BRANCH}\"" >> src/build_info.py
+      echo "CYCLONEDDS_INSIGHT_BUILD_ID = \"${BUILD_ID}\"" >> src/build_info.py
+      echo "CYCLONEDDS_INSIGHT_BUILD_PIPELINE_ID = \"${BUILD_PIPELINE_ID}\"" >> src/build_info.py
+      echo "CYCLONEDDS_GIT_HASH_SHORT = \"$CYCLONEDDS_GIT_HASH_SHORT\"" >> src/build_info.py
+      echo "CYCLONEDDS_GIT_HASH = \"$CYCLONEDDS_GIT_HASH\"" >> src/build_info.py
+      echo "CYCLONEDDS_PYTHON_GIT_HASH_SHORT = \"$CYCLONEDDS_PYTHON_GIT_HASH_SHORT\"" >> src/build_info.py
+      echo "CYCLONEDDS_PYTHON_GIT_HASH = \"$CYCLONEDDS_PYTHON_GIT_HASH\"" >> src/build_info.py
+    displayName: Generate build_info.py
+
+    # Get Version
+  - bash: |
+      version=$(python src/version.py)
+      echo "###vso[task.setvariable variable=version;]$version"
+    displayName: Capture Version
+    name: versionStep
+
   # Build CycloneDDS-Insight
   - bash: |
       set -e -x
