build updater not on darwin

--- a/.azure/templates/build-insight.yml
+++ b/.azure/templates/build-insight.yml
@@ -94,8 +94,10 @@ steps:
       pyside6-rcc ./resources.qrc -o ./src/qrc_file.py && \
       DYLD_LIBRARY_PATH="$CYCLONEDDS_HOME/lib" \
       LD_LIBRARY_PATH="$CYCLONEDDS_HOME/lib:$LD_LIBRARY_PATH" \
-      pyinstaller main.spec --noconfirm --clean &&
-      pyinstaller src/updater.py --onefile --name Updater -i "NONE" --distpath "./dist/CycloneDDS Insight" --noconsole --noconfirm --clean
+      pyinstaller main.spec --noconfirm --clean
+      if [ "$(uname)" != "Darwin" ]; then
+          pyinstaller src/updater.py --onefile --name Updater -i "NONE" --distpath "./dist/CycloneDDS Insight" --noconsole --noconfirm --clean
+      fi
     name: cyclonedds_insight_build
     displayName: Build CycloneDDS-Insight
 
