feature/auto-updater (#76)
* implement updater for macos

* implement updater exe

* implement updater for linux

* improve updater cross platform structure

* implement auto updater for windows

* add debian package

* improve update texts

* build updater not on darwin

* fix debian find desktop file

* make create debian script executeable

* fix darkmode in updater view

* improve auto-update on linux when folder not writeable

* raise error when cannot create tmp folder

* remove leftover code

--- a/.azure/templates/build-insight.yml
+++ b/.azure/templates/build-insight.yml
@@ -95,6 +95,9 @@ steps:
       DYLD_LIBRARY_PATH="$CYCLONEDDS_HOME/lib" \
       LD_LIBRARY_PATH="$CYCLONEDDS_HOME/lib:$LD_LIBRARY_PATH" \
       pyinstaller main.spec --noconfirm --clean
+      if [ "$(uname)" != "Darwin" ]; then
+          pyinstaller src/updater.py --onefile --name Updater -i "NONE" --distpath "./dist/CycloneDDS Insight" --noconsole --noconfirm --clean
+      fi
     name: cyclonedds_insight_build
     displayName: Build CycloneDDS-Insight
 
@@ -131,6 +134,19 @@ steps:
     inputs:
       targetPath: dist/cyclonedds-insight-$(version)-linux-x64.tar.gz
       artifactName: cyclonedds-insight-$(version)-linux-x64
+
+  # Debian Package
+  - bash: |
+      set -e -x
+      ./create_debian_pkg.sh ${VERSION} amd64
+    name: cyclonedds_insight_build_debian_pkg
+    displayName: Build CycloneDDS-Insight-Debian-Pkg
+    condition: eq(variables['Agent.OS'], 'Linux')
+  - task: PublishPipelineArtifact@1
+    condition: eq(variables['Agent.OS'], 'Linux')
+    inputs:
+      targetPath: dist/cyclonedds-insight_$(version)_amd64.deb
+      artifactName: cyclonedds-insight-$(version)-debian-x64
 
   # MacOS Bundle
   - bash: |
